feat: implement user entity, repository, service, controller and dtos

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,21 @@
-server.port=0
+# application
 spring.application.name=user-ms
+
+# discovery
+server.port=0
 eureka.client.serviceUrl.defaultZone=http://localhost:2000/eureka/
 eureka.instance.hostname=localhost
 eureka.instance.instance-id=${spring.application.name}:${random.uuid}
 
+# database
+hibernate.dialect=org.hibernate.dialect.HSQLDialect
+spring.datasource.driver-class-name=org.postgresql.Driver
+spring.datasource.url=jdbc:postgresql://localhost:1000/user-ms
+spring.datasource.username=admin
+spring.datasource.password=admin
+
+# show sql in terminal for easier debug
+spring.jpa.show-sql=true
+
+# enable hibernate to create schemas in database
+spring.jpa.hibernate.ddl-auto=update
