--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -10,7 +10,7 @@ eureka.instance.instance-id=${spring.application.name}:${random.uuid}
 # database
 hibernate.dialect=org.hibernate.dialect.HSQLDialect
 spring.datasource.driver-class-name=org.postgresql.Driver
-spring.datasource.url=jdbc:postgresql://localhost:1000/user-ms
+spring.datasource.url=jdbc:postgresql://localhost:1000/${spring.application.name}
 spring.datasource.username=admin
 spring.datasource.password=admin
 
