refactor: refine project

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -10,9 +10,9 @@ eureka.instance.instance-id=${spring.application.name}:${random.uuid}
 # database
 hibernate.dialect=org.hibernate.dialect.HSQLDialect
 spring.datasource.driver-class-name=org.postgresql.Driver
-spring.datasource.url=jdbc:postgresql://localhost:1000/${spring.application.name}
-spring.datasource.username=admin
-spring.datasource.password=admin
+spring.datasource.url=jdbc:postgresql://localhost:5432/${spring.application.name}
+spring.datasource.username=postgres
+spring.datasource.password=postgres
 
 # show sql in terminal for easier debug
 spring.jpa.show-sql=true
